--- a/package.json
+++ b/package.json
@@ -4,16 +4,55 @@
   "description": "api for ordnung",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint && npm run coverage",
+    "lint": "eslint --ignore-path .gitignore .",
+    "start": "babel-node src/index.js",
+    "coverage": "nyc --require babel-core/register --require ./test/setup -- mocha $(find test -name '*.test.js') && nyc report --reporter=cobertura"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thinius/ordnung.git"
+    "url": "git+https://github.com/thinius/ordnung-api.git"
   },
   "author": "Thinius Alexander Rosé <thiniusrose@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/thinius/ordnung/issues"
   },
-  "homepage": "https://github.com/thinius/ordnung#readme"
+  "homepage": "https://github.com/thinius/ordnung#readme",
+  "dependencies": {
+    "bluebird": "^3.3.1",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "lodash": "^4.5.0",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
+    "sequelize": "^3.19.2",
+    "babel-cli": "6.4.5",
+    "babel-core": "6.4.5",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-stage-0": "6.3.13" ,
+    "bcrypt": "0.8.5",
+    "bluebird": "3.2.1",
+    "compression": "1.6.1",
+    "cookie-parser": "1.4.1",
+    "cors": "2.7.1",
+    "express-jwt": "3.3.0",
+    "jsonwebtoken": "5.5.4",
+    "pg": "4.4.4",
+    "pg-hstore": "2.3.2",
+    "sequelize": "3.19.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^5.0.0-beta10",
+    "chai": "^3.4.0",
+    "chai-as-promised": "^5.1.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-config-webkom": "^1.2.0",
+    "mocha": "^2.3.3",
+    "istanbul": "^0.4.2",
+    "nyc": "^5.6.0",
+    "sequelize-fixtures": "git+https://github.com/abakusbackup/sequelize-fixtures.git",
+    "supertest": "^1.1.0"  
+  }
 }
