--- a/package.json
+++ b/package.json
@@ -20,24 +20,23 @@
   },
   "homepage": "https://github.com/thinius/ordnung#readme",
   "dependencies": {
-    "bluebird": "^3.3.1",
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "lodash": "^4.5.0",
-    "method-override": "^2.3.5",
-    "morgan": "^1.6.1",
-    "sequelize": "^3.19.2",
     "babel-cli": "6.4.5",
     "babel-core": "6.4.5",
     "babel-preset-es2015": "6.3.13",
-    "babel-preset-stage-0": "6.3.13" ,
+    "babel-preset-stage-0": "6.3.13",
     "bcrypt": "0.8.5",
     "bluebird": "3.2.1",
+    "body-parser": "^1.15.0",
     "compression": "1.6.1",
+    "continuation-local-storage": "^3.1.6",
     "cookie-parser": "1.4.1",
     "cors": "2.7.1",
+    "express": "^4.13.4",
     "express-jwt": "3.3.0",
     "jsonwebtoken": "5.5.4",
+    "lodash": "^4.5.0",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
     "pg": "4.4.4",
     "pg-hstore": "2.3.2",
     "sequelize": "3.19.1"
@@ -53,6 +52,6 @@
     "istanbul": "^0.4.2",
     "nyc": "^5.6.0",
     "sequelize-fixtures": "git+https://github.com/abakusbackup/sequelize-fixtures.git",
-    "supertest": "^1.1.0"  
+    "supertest": "^1.1.0"
   }
 }
