--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "api for ordnung",
   "main": "src/index.js",
   "scripts": {
+    "watch": "nodemon --exec npm start",
     "test": "npm run lint && npm run coverage",
     "lint": "eslint --ignore-path .gitignore .",
     "start": "babel-node src/index.js",
